--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					  When I'm not coding, for fun I am into fitness, reading or spending some quality time with family.  Above all else is sharing a few drinks and a good laugh with friends while traveling. 
 				  </div>
 				  <div class="item">
-					<img src="images/friends.jpg" class="rounded" alt="climbing">
+					<img src="images/friends.jpg" class="rounded" alt="socializing">
 				  </div>
 				</div>
 			</article>
