--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 					<p>Content Form Here</p>
 				  </div>
 				  <div class="item">					
-					<p><a href = "mailto: dadetifa1@yahoo.com">Email</a><p>
+					<p><a href = "mailto:dadetifa1@yahoo.com">Email</a><p>
 					<p><a href="https://www.linkedin.com/in/bamidele-adetifa-110aa33a/" target="_blank">Linkedln</a></p>
 					<p><a href="https://github.com/dadetifa1" target="_blank">Github</a></p>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90374.26786202694!2d-93.17626482170361!3d44.939685990413736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b2d4cee4e9379f%3A0xc87291d23fda2e29!2sSt%20Paul%2C%20MN!5e0!3m2!1sen!2sus!4v1601160321469!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90374.26786202694!2d-93.17626482170361!3d44.939685990413736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b2d4cee4e9379f%3A0xc87291d23fda2e29!2sSt%20Paul%2C%20MN!5e0!3m2!1sen!2sus!4v1601160321469!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				  </div>
 				</div>
 			</article>
