--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				  </div>
 				  <div class="item">
 					<h2>Hello. I'm Bamidele Adetifa!</h2>
-					<p>I go by Dele, that seems to be earier for everyone. The name is of Nigerian decent.  I went to school for networking however to go into that program it required two programming courses.  Fortunately for me I found out I loved programming better.</p>
+					<p>I go by Dele, that seems to be easier for everyone. The name is of Nigerian decent.  I went to school for networking however to go into that program it required two programming courses.  Fortunately for me I found out I loved programming better.</p>
 
 					<p>Since graduation from the University of Wisconsin (River Falls), I find that I like reading, working out, socializing and coding.  Thanks for stopping by!</p>
 				  </div>
