adding a new app

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<article id="intro">
 				<div class="group">
 				  <div class="item">
-					<img src="images/my-only.jpg" alt="Me!!!">
+					<img class="rounded" src="images/my-only.jpg" alt="Me!!!">
 				  </div>
 				  <div class="item">
 					<h2>Hello. I'm Bamidele Adetifa!</h2>
@@ -60,16 +60,16 @@
 			<article id="Portfolio" class="space-section">
 				<h2>Portfolio</h2>
 				<div class="group group-no-mg">
-					<div class="item">
-						<img src="images/portfolio/placeholder.png" alt="Quiz App Screenshot" class="rounded">
-						<h3>Title of the Project</h3>
-						<p>This is a description of the Quiz App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
+					<div class="item portfolio">
+						<img src="images/portfolio/App1.jpg" alt="Book of fagi App Screenshot" class="rounded">
+						<h3>Book of fagi</h3>
+						<p>As user in a new city (or even your current city) use this to discover new places, restaurants or events to visit.</p>
 						<ul>
-							<li><a href="#">GitHub</a></li>
-							<li><a href="#">Live App</a></li>
+							<li><a href="https://github.com/dadetifa1/BookOfFagi">GitHub</a></li>
+							<li><a href="https://dadetifa1.github.io/BookOfFagi/">Live App</a></li>
 						</ul>
 					</div>
-					<div class="item">
+					<div class="item portfolio">
 						<img src="images/portfolio/placeholder.png" alt="Quiz App Screenshot" class="rounded">
 						<h3>Title of the Project</h3>
 						<p>This is a description of the App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 				<div class="group group-no-mg">
-					<div class="item">
+					<div class="item portfolio">
 						<img src="images/portfolio/placeholder.png" alt="Quiz App Screenshot" class="rounded">
 						<h3>Title of the Project</h3>
 						<p>This is a description of the Quiz App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
@@ -89,7 +89,7 @@
 						  <li><a href="#">Live App</a></li>
 						</ul>
 					</div>
-					<div class="item">
+					<div class="item portfolio">
 						<img src="images/portfolio/placeholder.png" alt="Quiz App Screenshot" class="rounded">
 						<h3>Title of the Project</h3>
 						<p>This is a description of the App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
