updating with new apps

--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
 						</ul>
 					</div>
 					<div class="item portfolio">
-						<img src="images/portfolio/placeholder.png" alt="Quiz App Screenshot" class="rounded">
-						<h3>Title of the Project</h3>
-						<p>This is a description of the App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
+						<img src="images/portfolio/sales_entry.jpg" alt="Quiz App Screenshot" class="rounded">
+						<h3>Protect app</h3>
+						<p>This app is a prototype for a client to collect information regarding a sale and a salesperson</p>
 						<ul>
-							<li><a href="#">GitHub</a></li>
-							<li><a href="#">Live App</a></li>
+							<li><a href="https://github.com/dadetifa1/Protech-app">GitHub</a></li>
+							<li><a href="https://protech-app.vercel.app/">Live App</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="group group-no-mg">
 					<div class="item portfolio">
-						<img src="images/portfolio/placeholder.png" alt="Quiz App Screenshot" class="rounded">
-						<h3>Title of the Project</h3>
-						<p>This is a description of the Quiz App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
+						<img src="images/portfolio/Landing_page.jpg" alt="Quiz App Screenshot" class="rounded">
+						<h3>IMedTrans</h3>
+						<p>A non emergency transportation application, that a user can use to schedule transport for daily needs</p>
 						<ul>
-						  <li><a href="#">GitHub</a></li>
-						  <li><a href="#">Live App</a></li>
+						  <li><a href="https://github.com/dadetifa1/ImedTrans-app">GitHub</a></li>
+						  <li><a href="https://im-ed-trans-app-dadetifa1.vercel.app/">Live App</a></li>
 						</ul>
 					</div>
 					<div class="item portfolio">
