--- a/index.html
+++ b/index.html
@@ -22,111 +22,110 @@
 		
 		<main>
 			<div class="wrapper">
-			<!-- intro  -->
-			<article id="intro">
-				<div class="group">
-				  <div class="item">
-					<img class="rounded" src="images/my-only.jpg" alt="Me!!!">
-				  </div>
-				  <div class="item">
-					<h2>Hello. I'm Bamidele Adetifa!</h2>
-					<p>I go by Dele, that seems to be easier for everyone. The name is of Nigerian decent.  I went to school for networking however to go into that program it required two programming courses.  Fortunately for me I found out I loved programming better.</p>
+				<!-- intro  -->
+				<article id="intro">
+					<div class="group">
+					  <div class="item">
+						<img class="rounded" src="images/my-only.jpg" alt="Me!!!">
+					  </div>
+					  <div class="item">
+						<h2>Hello. I'm Bamidele Adetifa!</h2>
+						<p>I go by Dele, that seems to be easier for everyone. The name is of Nigerian descent.  I went to school for networking however to go into that program it required two programming courses.  Fortunately for me, I found out I loved programming better.</p>
 
-					<p>Since graduation from the University of Wisconsin (River Falls), I find that I like reading, working out, socializing and coding.  Thanks for stopping by!</p>
-				  </div>
-				</div>
-			</article>
-
-			<!-- about me -->
-			<article class="bg-dark bottom-margin space-section" id="about">
-				<h2 class="about-h2">About me</h2>
-				<div class="group group-no-mg">
-				  <div class="item-double">
-					<p>
-						I started back end programming in college using Java, when I got my first Job I moved to C#.  Since I have
-						worked with SQL, ASP.NET, REST API and much more.  At the moment I am working toward become a full stack programmer. 						
-					</p>
-					<p>
-					</p>
-					  When I'm not coding, for fun I am into fitness, reading or spending some quality time with family.  Above all else is sharing a few drinks and a good laugh with friends while traveling. 
-				  </div>
-				  <div class="item">
-					<img src="images/friends.jpg" class="rounded" alt="socializing">
-				  </div>
-				</div>
-			</article>
-
-			<!-- Portfolio -->
-			<article id="Portfolio" class="space-section">
-				<h2>Portfolio</h2>
-				<div class="group group-no-mg">
-					<div class="item portfolio">
-						<img src="images/portfolio/App1.jpg" alt="Book of fagi App Screenshot" class="rounded">
-						<h3>Book of fagi</h3>
-						<p>As user in a new city (or even your current city) use this to discover new places, restaurants or events to visit.</p>
-						<ul>
-							<li><a href="https://github.com/dadetifa1/BookOfFagi">GitHub</a></li>
-							<li><a href="https://dadetifa1.github.io/BookOfFagi/">Live App</a></li>
-						</ul>
+						<p>Since graduation from the University of Wisconsin (River Falls), I find that I like reading, working out, socializing and coding.  Thanks for stopping by!</p>
+					  </div>
 					</div>
-					<div class="item portfolio">
-						<img src="images/portfolio/sales_entry.jpg" alt="Quiz App Screenshot" class="rounded">
-						<h3>Protect app</h3>
-						<p>This app is a prototype for a client to collect information regarding a sale and a salesperson</p>
-						<ul>
-							<li><a href="https://github.com/dadetifa1/Protech-app">GitHub</a></li>
-							<li><a href="https://protech-app.vercel.app/">Live App</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="group group-no-mg">
-					<div class="item portfolio">
-						<img src="images/portfolio/Landing_page.jpg" alt="Quiz App Screenshot" class="rounded">
-						<h3>IMedTrans</h3>
-						<p>A non emergency transportation application, that a user can use to schedule transport for daily needs</p>
-						<ul>
-						  <li><a href="https://github.com/dadetifa1/ImedTrans-app">GitHub</a></li>
-						  <li><a href="https://im-ed-trans-app-dadetifa1.vercel.app/">Live App</a></li>
-						</ul>
-					</div>
-					<div class="item portfolio">
-						<img src="images/portfolio/placeholder.png" alt="Quiz App Screenshot" class="rounded">
-						<h3>Title of the Project</h3>
-						<p>This is a description of the App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
-						<ul>
-							<li><a href="#">GitHub</a></li>
-							<li><a href="#">Live App</a></li>
-						</ul>
-					</div>
-				</div>
-			</article>
+				</article>
 
-			<!-- Contact me -->
-			<article id="contact">
-				<h2>Contact</h2>
-				<div class="group">
-				  <div class="item">
-					<h3>Send me a message</h3>
-					<form action="https://formspree.io/xpzowqyw" method="POST">
-					  <label for="user-name">Name:</label>
-					  <input id="user-name" type="text" name="name">
+				<!-- about me -->
+				<article class="bg-dark bottom-padding space-section" id="about">
+					<h2 class="about-h2"><u>About me</u></h2>
+					<div class="group group-no-mg">
+					  <div class="item-double">
+						<p>
+							I started back end programming in college using Java, when I got my first Job I moved to C#.  Since I have
+							worked with SQL, ASP.NET, REST API and much more.  At the moment I am working toward become a full stack programmer. 						
+						</p>
+						<p>
+						</p>
+						  When I'm not coding, for fun I am into fitness, reading or spending some quality time with family.  Above all else is sharing a few drinks and a good laugh with friends while traveling. 
+					  </div>
+					  <div class="item">
+						<img src="images/friends.jpg" class="rounded" alt="socializing">
+					  </div>
+					</div>
+				</article>
 
-					  <label for="user-email">Email:</label>
-					  <input id="user-email" type="text" name="email">
+				<!-- Portfolio -->
+				<article id="Portfolio" class="space-section">
+					<h2><u>Portfolio</u></h2>
+					<div class="group group-no-mg">
+						<div class="item portfolio">
+							<img src="images/portfolio/App1.jpg" alt="Book of fagi App Screenshot" >
+							<h3>Book of fagi</h3>
+							<p>As user in a new city (or even your current city) use this to discover new places, restaurants or events to visit.</p>
+							<p>Tech used - HTML, CSS, JS</p>
+							<ul>
+								<li><a href="https://github.com/dadetifa1/BookOfFagi" target="_blank">GitHub</a></li>
+								<li><a href="https://dadetifa1.github.io/BookOfFagi/" target="_blank">Live App</a></li>
+							</ul>
+						</div>
+						<div class="item portfolio">
+							<img src="images/portfolio/sales_collections.jpg" alt="Quiz App Screenshot" >
+							<h3>Protect app</h3>
+							<p>This app is a prototype for a client to collect information regarding a sale and a salesperson</p>
+							<p>Tech used - HTML, CSS, JS, Node, Reactjs, SQL DB</p>
+							<ul>
+								<li><a href="https://github.com/dadetifa1/Protech-app" target="_blank">GitHub</a></li>
+								<li><a href="https://protech-app.vercel.app/" target="_blank">Live App</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="group group-no-mg">
+						<div class="item portfolio">
+							<img src="images/portfolio/IMedTrans_app.jpg" alt="Quiz App Screenshot" >
+							<h3>IMedTrans</h3>
+							<p>A non emergency transportation application, that a user can use to schedule transport for daily needs</p>
+							<p>Tech used - HTML, CSS, JS, Node, Reactjs, SQL DB</p>
+							<ul>
+							  <li><a href="https://github.com/dadetifa1/ImedTrans-app" target="_blank">GitHub</a></li>
+							  <li><a href="https://im-ed-trans-app-dadetifa1.vercel.app/" target="_blank">Live App</a></li>
+							</ul>
+						</div>
+						<div class="item portfolio">
+							
+						</div>
+					</div>
+				</article>
 
-					  <label for="user-message">Message:</label>
-					  <textarea id="user-message" name="message"></textarea>
-					  <button type="submit">Submit</button>
-					</form>
-				  </div>
-				  <div class="item-double">					
-					<p><a href = "mailto:dadetifa1@yahoo.com">Email</a><p>
-					<p><a href="https://www.linkedin.com/in/bamidele-adetifa-110aa33a/" target="_blank">LinkedIn</a></p>
-					<p><a href="https://github.com/dadetifa1" target="_blank">Github</a></p>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90374.26786202694!2d-93.17626482170361!3d44.939685990413736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b2d4cee4e9379f%3A0xc87291d23fda2e29!2sSt%20Paul%2C%20MN!5e0!3m2!1sen!2sus!4v1601160321469!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-				  </div>
-				</div>
-			</article>
+				<!-- Contact me -->
+				<article id="contact" class="space-section-top">
+					<h2><u>Contact</u></h2>
+					<div class="group">
+					  <div class="item">
+						<h3>Send me a message</h3>
+						<form action="https://formspree.io/xpzowqyw" method="POST">
+						  <label for="user-name">Name:</label>
+						  <input id="user-name" type="text" name="name">
+
+						  <label for="user-email">Email:</label>
+						  <input id="user-email" type="text" name="email">
+
+						  <label for="user-message">Message:</label>
+						  <textarea id="user-message" name="message"></textarea>
+						  <button type="submit">Submit</button>
+						</form>
+					  </div>
+					  <div class="item-double">					
+						<p><a href = "mailto:dadetifa1@yahoo.com">Email</a><p>
+						<p><a href="https://www.linkedin.com/in/bamidele-adetifa-110aa33a/" target="_blank">LinkedIn</a></p>
+						<p><a href="https://github.com/dadetifa1" target="_blank">GitHub</a></p>
+						<div class="container-iframe">
+						<iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90374.26786202694!2d-93.17626482170361!3d44.939685990413736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b2d4cee4e9379f%3A0xc87291d23fda2e29!2sSt%20Paul%2C%20MN!5e0!3m2!1sen!2sus!4v1601160321469!5m2!1sen!2sus"></iframe>
+						</div>
+					  </div>
+					</div>
+				</article>
 			</div>
 		</main>
 
