--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 						<h3>Send me a message</h3>
 						<form action="https://formspree.io/xpzowqyw" method="POST">
 						  <label for="user-name">Name:</label>
-						  <input id="user-name" type="text" name="name">
+						  <input id="user-name" type="text" name="name" required>
 
 						  <label for="user-email">Email:</label>
-						  <input id="user-email" type="text" name="email">
+						  <input id="user-email" type="text" name="email" required>
 
 						  <label for="user-message">Message:</label>
-						  <textarea id="user-message" name="message"></textarea>
+						  <textarea id="user-message" name="message" required></textarea>
 						  <button type="submit">Submit</button>
 						</form>
 					  </div>
